--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Contact Page with Map</title>
-<link href="css/styles.css" rel="stylesheet" type="text/css" />
+<link href="css/styles1.css" rel="stylesheet" type="text/css" />
 <link href="css/nivo-slider.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="js/jquery-1.4.2.min.js" language="javascript"></script>
 <script type="text/javascript" src="js/jquery.tools.min.js" language="javascript"></script>
